11_PROJECTS/Project05_Kubernetes_Deployment/manifest/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-portfolio
  labels:
    project: kubernetes-deployment
    environment: lab
