11_PROJECTS/Project05_Kubernetes_Deployment/manifest/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: devops-portfolio
  labels:
    app: springboot-application
spec:
  type: ClusterIP
  selector:
    app: springboot-application
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
